--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ Author URL: http://w3layouts.com
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Luong Minh Hien Personal Portfolio | Home : W3layouts</title>
+  <title>Luong Minh Hien Personal Portfolio | Home</title>
 
   <!-- google fonts -->  
   <link href="//fonts.googleapis.com/css2?family=Jost:wght@300;400;600&display=swap" rel="stylesheet">
@@ -43,6 +43,9 @@ Author URL: http://w3layouts.com
               <ul class="navbar-nav ml-auto">
                   <li class="nav-item active">
                       <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                  </li>
+                  <li class="nav-item @@projects__active">
+                    <a class="nav-link" href="projects.html">Projects</a>
                   </li>
                   <li class="nav-item @@about__active">
                       <a class="nav-link" href="about.html">About</a>
@@ -86,7 +89,7 @@ Author URL: http://w3layouts.com
                   skills in a collaborative environment.</p>
                 <div class="mt-sm-5 mt-4">
                     <a class="btn btn-primary btn-style mr-2" href="contact.html"> Hire Me </a>
-                    <a class="btn btn-outline-primary btn-style mr-2" href="#portfolio"> Portfolio </a>
+                    <a class="btn btn-outline-primary btn-style mr-2" href="./assets/files/CV Luong Minh Hien - minimal.pdf" download> Portfolio </a>
                 </div>
             </div>
             <div class="col-lg-6 col-md-8 col-sm-10 mt-lg-0 mt-4">
@@ -115,7 +118,7 @@ Author URL: http://w3layouts.com
                     <p class="mt-4">A person who has 3 years in teaching front-end development, and Design UI, and can work under high
                       pressure for the best of projects. Develop games as a free-time hobby. Friendly, well-communicated, and available to share knowledge with teammates.Learn and move forward using new skills for future projects.
                       </p>
-                    <a href="#download" class="btn btn-style btn-primary mt-lg-5 mt-4">Download CV</a>
+                    <a  href="./assets/files/CV Luong Minh Hien - minimal.pdf" download class="btn btn-style btn-primary mt-lg-5 mt-4">Download CV</a>
                 </div>
             </div>
         </div>
@@ -130,22 +133,22 @@ Author URL: http://w3layouts.com
           <div class="row">
           <div id="loopslider" class="slider-wrap">
             <ul>
-              <li><img src="/assets/images/icons8-c.svg" alt="img1"></li>
-              <li><img src="/assets/images/icons8-c-sharp-logo.svg" alt="img1"></li>
-              <li><img src="/assets/images/icons8-java.svg" alt="img1"></li>
-              <li><img src="/assets/images/icons8-mongodb-a-cross-platform-document-oriented-database-program-96.png" alt="img1"></li>
-              <li><img src="/assets/images/icons8-postgresql.svg" alt="img1"></li>
-              <li><img src="/assets/images/icons8-react.png" alt="img1"></li>
-              <li><img src="/assets/images/icons8-typescript-96.png" alt="img1"></li>
-              <li><img src="/assets/images/icons8-unity.svg" alt="img1"></li>
-              <li><img src="/assets/images/icons8-c.svg" alt="img1"></li>
-              <li><img src="/assets/images/icons8-c-sharp-logo.svg" alt="img1"></li>
-              <li><img src="/assets/images/icons8-java.svg" alt="img1"></li>
-              <li><img src="/assets/images/icons8-mongodb-a-cross-platform-document-oriented-database-program-96.png" alt="img1"></li>
-              <li><img src="/assets/images/icons8-postgresql.svg" alt="img1"></li>
-              <li><img src="/assets/images/icons8-react.png" alt="img1"></li>
-              <li><img src="/assets/images/icons8-typescript-96.png" alt="img1"></li>
-              <li><img src="/assets/images/icons8-unity.svg" alt="img1"></li>
+              <li><img src="./assets/images/icons8-c.svg" alt="img1"></li>
+              <li><img src="./assets/images/icons8-c-sharp-logo.svg" alt="img1"></li>
+              <li><img src="./assets/images/icons8-java.svg" alt="img1"></li>
+              <li><img src="./assets/images/icons8-mongodb-a-cross-platform-document-oriented-database-program-96.png" alt="img1"></li>
+              <li><img src="./assets/images/icons8-postgresql.svg" alt="img1"></li>
+              <li><img src="./assets/images/icons8-react.png" alt="img1"></li>
+              <li><img src="./assets/images/icons8-typescript-96.png" alt="img1"></li>
+              <li><img src="./assets/images/icons8-unity.svg" alt="img1"></li>
+              <li><img src="./assets/images/icons8-c.svg" alt="img1"></li>
+              <li><img src="./assets/images/icons8-c-sharp-logo.svg" alt="img1"></li>
+              <li><img src="./assets/images/icons8-java.svg" alt="img1"></li>
+              <li><img src="./assets/images/icons8-mongodb-a-cross-platform-document-oriented-database-program-96.png" alt="img1"></li>
+              <li><img src="./assets/images/icons8-postgresql.svg" alt="img1"></li>
+              <li><img src="./assets/images/icons8-react.png" alt="img1"></li>
+              <li><img src="./assets/images/icons8-typescript-96.png" alt="img1"></li>
+              <li><img src="./assets/images/icons8-unity.svg" alt="img1"></li>
 
             </ul>
           </div>
@@ -329,7 +332,7 @@ Author URL: http://w3layouts.com
             </div>
             <div class="mt-5 text-more">
                 <p class="mt-4 pt-3 sample text-center">
-                    <a href="services.html">View All Projects <span class="pl-2 fa fa-long-arrow-right"></span></a>
+                    <a href="projects.html">View All Projects <span class="pl-2 fa fa-long-arrow-right"></span></a>
                 </p>
             </div>
         </div>
