--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@ Author URL: http://w3layouts.com
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Luong Minh Hien Personal Portfolio | About : W3layouts</title>
+  <title>Luong Minh Hien Personal Portfolio | About</title>
 
   <!-- google fonts -->  
   <link href="//fonts.googleapis.com/css2?family=Jost:wght@300;400;600&display=swap" rel="stylesheet">
@@ -44,6 +44,9 @@ Author URL: http://w3layouts.com
                   <li class="nav-item @@home__active">
                       <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                   </li>
+                  <li class="nav-item @@projects__active">
+                    <a class="nav-link" href="projects.html">Projects</a>
+                </li>
                   <li class="nav-item active">
                       <a class="nav-link" href="about.html">About</a>
                   </li>
@@ -116,7 +119,7 @@ Author URL: http://w3layouts.com
                         </div>
                     </div>
                     <div class="my-social mt-lg-5 mt-4">
-                        <a href="#download" class="btn btn-style btn-primary">Download CV</a>
+                        <a href="./assets/files/CV Luong Minh Hien - minimal.pdf" download class="btn btn-style btn-primary">Download CV</a>
                         <ul class="social m-0 p-0">
                             <li><a href="https://www.linkedin.com/in/hi%E1%BB%83n-minh-b10b17250/" target="_blank"><span class="fa fa-linkedin-square" target="_blank"></span></a></li>
                           </ul>
