--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@ Author URL: http://w3layouts.com
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Luong Minh Hien Personal Portfolio | Contact : W3layouts</title>
+  <title>Luong Minh Hien Personal Portfolio | Contact</title>
 
   <!-- google fonts -->  
   <link href="//fonts.googleapis.com/css2?family=Jost:wght@300;400;600&display=swap" rel="stylesheet">
@@ -44,9 +44,13 @@ Author URL: http://w3layouts.com
                   <li class="nav-item @@home__active">
                       <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                   </li>
+                  <li class="nav-item @@projects__active">
+                    <a class="nav-link" href="projects.html">Projects</a>
+                  </li>
                   <li class="nav-item @@about__active">
                       <a class="nav-link" href="about.html">About</a>
                   </li>
+                 
                   <li class="nav-item active">
                       <a class="nav-link" href="contact.html">Contact</a>
                   </li>
